# SOEM

./: CMakeLists.txt
soem/: ethercatcoe.c
test/linux/simple_test/: CMakeLists.txt  custom_test.c  simple_test.c
test/linux/slaveinfo/: slaveinfo.c
